--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,8 +44,11 @@
   <ItemGroup>
     <Compile Include="AdminBs.cs" />
     <Compile Include="CategoryBs.cs" />
+    <Compile Include="CommonBs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecurityBs.cs" />
     <Compile Include="UrlBs.cs" />
+    <Compile Include="UserAreaBs.cs" />
     <Compile Include="UserBs.cs" />
   </ItemGroup>
   <ItemGroup>
