--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -34,7 +34,9 @@
       <HintPath>C:\Users\Burmy\Desktop\MVCLinkHub\trunk\BLL\bin\Debug\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
