--- a/LinkHubUI/LinkHubUI/Web.config
+++ b/LinkHubUI/LinkHubUI/Web.config
@@ -23,6 +23,11 @@
     <authentication mode ="Forms">
       <forms loginUrl="/Security/Login"></forms>
     </authentication>
+    <membership defaultProvider="MyMembershipProvider">
+      <providers>
+        <add name="MyMembershipProvider" type="BLL.LinkHubMembershipProvider"/>
+      </providers>
+    </membership>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
