--- a/LinkHubUI/LinkHubUI/Web.config
+++ b/LinkHubUI/LinkHubUI/Web.config
@@ -25,9 +25,16 @@
     </authentication>
     <membership defaultProvider="MyMembershipProvider">
       <providers>
+        <clear/>
         <add name="MyMembershipProvider" type="BLL.LinkHubMembershipProvider"/>
       </providers>
     </membership>
+    <roleManager enabled="true" defaultProvider="MyRoleProvider">
+      <providers>
+        <clear/>
+        <add name="MyRoleProvider" type="BLL.LinkHubRoleProvider"/>
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
