--- a/LinkHubUI/LinkHubUI/LinkHubUI.csproj
+++ b/LinkHubUI/LinkHubUI/LinkHubUI.csproj
@@ -108,6 +108,7 @@
     <Content Include="Areas\Security\Views\Login\Index.cshtml" />
     <Content Include="Areas\Security\Views\Register\Index.cshtml" />
     <Content Include="Areas\Common\Views\BrowseURL\Index.cshtml" />
+    <Content Include="Areas\Common\Views\QuickURLSubmit\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -134,6 +135,7 @@
     <Compile Include="Areas\Common\Controllers\BaseCommonController.cs" />
     <Compile Include="Areas\Common\Controllers\BrowseURLController.cs" />
     <Compile Include="Areas\Common\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Common\Controllers\QuickURLSubmitController.cs" />
     <Compile Include="Areas\Security\Controllers\BaseSecurityController.cs" />
     <Compile Include="Areas\Security\Controllers\LoginController.cs" />
     <Compile Include="Areas\Security\Controllers\RegisterController.cs" />
