--- a/LinkHubUI/LinkHubUI/Web.config
+++ b/LinkHubUI/LinkHubUI/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -20,7 +20,10 @@
     <add key="autoFormsAuthentication" value="false"/>
   </appSettings>
   <connectionStrings>
-    <add name="LinkHubDbEntities" connectionString="metadata=res://*/LinkHubModel.csdl|res://*/LinkHubModel.ssdl|res://*/LinkHubModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JAIGANESH\SQLEXPRESS;initial catalog=LinkHubDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LinkHubDbEntities" connectionString="metadata=res://*/LinkHubModel.csdl|res://*/LinkHubModel.ssdl|res://*/LinkHubModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JAIGANESH\SQLEXPRESS;initial catalog=LinkHubDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="LinkHubDbConnectionString" connectionString="Data Source=JAIGANESH\SQLEXPRESS;Initial Catalog=LinkHubDb;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
